Correct description Robin, Adjust alignment for handheld

--- a/src/styles/[project].module.css
+++ b/src/styles/[project].module.css
@@ -8,6 +8,7 @@
 .project-body h3 {
   color: var(--bg-green);
   font-weight: 400;
+  margin-top: 0;
 }
 
 .project-body h5 {
